Changed image font path

--- a/css/icons/_settings.scss
+++ b/css/icons/_settings.scss
@@ -1,4 +1,4 @@
-$fontFileName: "../../fonts/social_foundicons";
+$fontFileName: "../fonts/social_foundicons";
 $fontName: "SocialFoundicons";
 $classPrefix: "foundicon-";
 
