--- a/css/app.css
+++ b/css/app.css
@@ -438,8 +438,8 @@ select {
 /* font-face */
 @font-face {
   font-family: "SocialFoundicons";
-  src: url("../../fonts/social_foundicons.eot");
-  src: url("../../fonts/social_foundicons.eot?#iefix") format("embedded-opentype"), url("../../fonts/social_foundicons.woff") format("woff"), url("../../fonts/social_foundicons.ttf") format("truetype"), url("../../fonts/social_foundicons.svg#SocialFoundicons") format("svg");
+  src: url("../fonts/social_foundicons.eot");
+  src: url("../fonts/social_foundicons.eot?#iefix") format("embedded-opentype"), url("../fonts/social_foundicons.woff") format("woff"), url("../fonts/social_foundicons.ttf") format("truetype"), url("../fonts/social_foundicons.svg#SocialFoundicons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
