--- a/css/app.sass
+++ b/css/app.sass
@@ -156,10 +156,6 @@ body
   background-color: $main-bg
   padding-bottom: 1em
 
-#map
-  width: 100%
-  height: 50em
-
 //
 // ABOUT SECTION
 //
@@ -206,7 +202,10 @@ body
         background-color: $alt-fg
 
 #map
-  .leaflet-popup-content-wrapper, .leaflet-popup-tip
+  width: 100%
+  height: 40em
+
+  .leaflet-popup-content-wrapper, .leaflet-popup-tip, a
     background-color: $darkblue
     color: $white
 
