--- a/css/app.sass
+++ b/css/app.sass
@@ -143,7 +143,7 @@ body
 //
 .location
   $main-fg: $white
-  $main-bg: $darkblue
+  $main-bg: $dark
 
   $header-font-color: $main-fg
   $subheader-font-color: $main-fg
@@ -207,7 +207,7 @@ body
   height: 40em
 
   .leaflet-popup-content-wrapper, .leaflet-popup-tip, a
-    background-color: $darkblue
+    background-color: $dark
     color: $white
 
   #address h6
