--- a/css/app.sass
+++ b/css/app.sass
@@ -88,6 +88,7 @@ body
     border-top: 1px dashed $main-fg
 
   .actions h4 a
+    -webkit-transition: background-color .3s
     @include button-style($alt-fg)
     @include radius
     color: $main-bg
