--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -11,6 +11,7 @@ $body-font-weight: 300 !default;
 $topbar-title-weight: 300 !default;
 $topbar-link-weight: 300 !default;
 $header-font-weight: 300 !default;
+$paragraph-font-weight: 300 !default;
 
 $topbar-height: 45px !default;
 $topbar-bg-color: darken($blue, 15%) !default;
