Fix style issues in map

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -4,6 +4,11 @@ $white: #FFFFFF;
 $dark: #222222;
 $blue: #26ADE4;
 
+$body-font-color: $dark !default;
+$body-bg: $white !default;
+$primary-color: $dark !default;
+$secondary-color: $blue !default;
+
 $base-font-size: 140% !default;
 $h6-font-size: .75em !default;
 
