--- a/css/app.sass
+++ b/css/app.sass
@@ -189,7 +189,7 @@ section.feature
 
   @include override-colors($main-fg,$main-bg)
 
-  .leaflet-popup-content-wrapper, .leaflet-popup-tip
+  .leaflet-popup-content-wrapper, .leaflet-popup-tip, .leaflet-control, .leaflet-control a
     background-color: $main-bg
     color: $main-fg
 
