Use better font on windows

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -24,7 +24,7 @@ $topbar-link-bg-hover: $blue;
 
 $header-top-margin: 0 !default;
 $header-bottom-margin: 0 !default;
-$header-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
+$header-font-family: "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif !default;
 $body-font-family: $header-font-family;
 
 @import "foundation/variables";
