--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -11,6 +11,7 @@ $secondary-color: $blue !default;
 
 $base-font-size: 140% !default;
 $h6-font-size: .75em !default;
+$paragraph-font-size: .5em !default;
 
 $body-font-weight: 300 !default;
 $topbar-title-weight: 300 !default;
@@ -18,7 +19,7 @@ $topbar-link-weight: 300 !default;
 $header-font-weight: 300 !default;
 $paragraph-font-weight: 300 !default;
 
-$topbar-bg-color: darken($white, 3%);
+$topbar-bg-color: darken($white, 5%);
 $topbar-link-color: $dark;
 $topbar-link-bg-hover: $blue;
 
