--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -4,28 +4,29 @@ $white: #FFFFFF;
 $dark: #222222;
 $blue: #26ADE4;
 
-$body-font-color: $dark !default;
-$body-bg: $white !default;
 $primary-color: $dark !default;
 $secondary-color: $blue !default;
 
 $base-font-size: 140% !default;
-$h6-font-size: .75em !default;
-$paragraph-font-size: .5em !default;
-
+$body-bg: $white !default;
+$body-font-color: $dark !default;
 $body-font-weight: 300 !default;
-$topbar-title-weight: 300 !default;
-$topbar-link-weight: 300 !default;
+$body-font-family: "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif !default;
+
+
+$header-top-margin: 0 !default;
+$header-bottom-margin: .1em !default;
+$header-font-family: $body-font-family;
 $header-font-weight: 300 !default;
+
+$paragraph-font-size: .75em !default;
+$paragraph-margin-bottom: .1em !default;
 $paragraph-font-weight: 300 !default;
 
 $topbar-bg-color: darken($white, 5%);
 $topbar-link-color: $dark;
 $topbar-link-bg-hover: $blue;
-
-$header-top-margin: 0 !default;
-$header-bottom-margin: 0 !default;
-$header-font-family: "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif !default;
-$body-font-family: $header-font-family;
+$topbar-title-weight: 300 !default;
+$topbar-link-weight: 300 !default;
 
 @import "foundation/variables";
