--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
 /* ========================================================================== HTML5 display definitions ========================================================================== */
 /** Correct `block` display not defined in IE 8/9. */
@@ -310,7 +311,7 @@ a:hover, a:focus { color: #151515; }
 a img { border: none; }
 
 /* Default paragraph styles */
-p { font-family: inherit; font-weight: 300; font-size: 0.75em; line-height: 1.6; margin-bottom: 0.1em; text-rendering: optimizeLegibility; }
+p { font-family: inherit; font-weight: 300; font-size: 0.75em; line-height: 1.25; margin-bottom: 0.5em; text-rendering: optimizeLegibility; }
 p aside { font-size: 0.875em; line-height: 1.35; font-style: italic; }
 
 /* Default header styles */
@@ -341,7 +342,7 @@ small { font-size: 60%; line-height: inherit; }
 code { font-family: Consolas, "Liberation Mono", Courier, monospace; font-weight: bold; color: #7f0a0c; }
 
 /* Lists */
-ul, ol, dl { font-size: 0.75em; line-height: 1.6; margin-bottom: 0.1em; list-style-position: outside; font-family: inherit; }
+ul, ol, dl { font-size: 0.75em; line-height: 1.25; margin-bottom: 0.5em; list-style-position: outside; font-family: inherit; }
 
 ul, ol { margin-left: 0; }
 ul.no-bullet, ol.no-bullet { margin-left: 0; }
@@ -367,12 +368,12 @@ abbr, acronym { text-transform: uppercase; font-size: 90%; color: #222222; borde
 abbr { text-transform: none; }
 
 /* Blockquotes */
-blockquote { margin: 0 0 0.1em; padding: 0.5625em 1.25em 0 1.1875em; border-left: 1px solid #dddddd; }
+blockquote { margin: 0 0 0.5em; padding: 0.5625em 1.25em 0 1.1875em; border-left: 1px solid #dddddd; }
 blockquote cite { display: block; font-size: 0.8125em; color: #555555; }
 blockquote cite:before { content: "\2014 \0020"; }
 blockquote cite a, blockquote cite a:visited { color: #555555; }
 
-blockquote, blockquote p { line-height: 1.6; color: #6f6f6f; }
+blockquote, blockquote p { line-height: 1.25; color: #6f6f6f; }
 
 /* Microformats */
 .vcard { display: inline-block; margin: 0 0 1.25em 0; border: 1px solid #dddddd; padding: 0.625em 0.75em; }
@@ -766,7 +767,7 @@ body { padding-top: 45px; }
 #header { padding: 0; background: #f2f2f2; }
 #header .fixed { opacity: 0.75; }
 
-#intro { color: #222222; background-color: white; background: white url(../img/white-bg.png) fixed; }
+#intro { color: #222222; background: white url(../img/white-bg.png) fixed; }
 #intro h1, #intro h2, #intro h3, #intro h4, #intro h5, #intro h6, #intro .subheader, #intro p, #intro blockquote, #intro a, #intro small { color: #222222; }
 #intro code, #intro abbr, #intro acronym { color: black; }
 #intro img { display: block; margin: 0 auto; max-width: 14em; }
@@ -783,7 +784,7 @@ body { padding-top: 45px; }
 #intro .actions h4 a:hover, #intro .actions h4 a:focus { background-color: #188fbf; }
 #intro .actions h4 a:hover, #intro .actions h4 a:focus { color: white; }
 
-#agenda { color: #222222; background-color: #26ade4; border-top: 0.25em dashed #222222; }
+#agenda { color: #222222; background: #26ade4 url(../img/white-bg.png) fixed; }
 #agenda h1, #agenda h2, #agenda h3, #agenda h4, #agenda h5, #agenda h6, #agenda .subheader, #agenda p, #agenda blockquote, #agenda a, #agenda small { color: #222222; }
 #agenda code, #agenda abbr, #agenda acronym { color: black; }
 #agenda .timings .row { border-bottom: 1px dashed #aee0f5; margin-bottom: 0; -webkit-transition: background-color 300ms ease-out; -moz-transition: background-color 300ms ease-out; transition: background-color 300ms ease-out; }
@@ -791,14 +792,15 @@ body { padding-top: 45px; }
 #agenda .timings .row.talk p { color: white; }
 #agenda .timings .row:last-child { border-bottom: 0; }
 #agenda .timings .row .small-4 { text-align: right; }
+#agenda .timings .row .small-4 p:after { display: block; position: absolute; top: 0.5em; right: -0.5em; content: "§"; }
 #agenda .timings .row .small-8 { text-align: left; }
 #agenda .timings .row:hover { background-color: #53beea; }
 
-#location { color: white; background-color: #222222; border-top: 0.25em dashed #26ade4; }
+#location { color: white; background: #222222 url(../img/white-bg.png) fixed; background-image: url(../img/dark-bg.jpg); }
 #location h1, #location h2, #location h3, #location h4, #location h5, #location h6, #location .subheader, #location p, #location blockquote, #location a, #location small { color: white; }
 #location code, #location abbr, #location acronym { color: #d9d9d9; }
 
-#about { color: white; background-color: #222222; border-top: 0.25em dashed white; }
+#about { color: white; background: #222222 url(../img/white-bg.png) fixed; background-image: url(../img/dark-bg.jpg); }
 #about h1, #about h2, #about h3, #about h4, #about h5, #about h6, #about .subheader, #about p, #about blockquote, #about a, #about small { color: white; }
 #about code, #about abbr, #about acronym { color: #d9d9d9; }
 #about .social a { font-size: 1.5em; display: inline-block; color: #222222; background-color: white; border-radius: 50%; width: 1.5em; height: 1.5em; line-height: 1.5em; margin: 0 0.25em; -webkit-transition: color 300ms ease-out; -moz-transition: color 300ms ease-out; transition: color 300ms ease-out; }
@@ -806,13 +808,13 @@ body { padding-top: 45px; }
 #about blockquote { text-align: left; }
 #about blockquote cite { text-align: right; }
 
-#map { width: 100%; height: 40em; color: white; background-color: #222222; }
+#map { width: 100%; height: 40em; color: white; background: #222222 url(../img/white-bg.png) fixed; }
 #map h1, #map h2, #map h3, #map h4, #map h5, #map h6, #map .subheader, #map p, #map blockquote, #map a, #map small { color: white; }
 #map code, #map abbr, #map acronym { color: #d9d9d9; }
 #map .leaflet-popup-content-wrapper, #map .leaflet-popup-tip, #map .leaflet-control, #map .leaflet-control a { background-color: #222222; color: white; }
 #map #address h6 { font-family: "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif; font-weight: 300; font-size: 1.5em; text-align: center; margin: 0; }
 
-#footer { color: #a6a6a6; background-color: #f2f2f2; padding: 0.5em 0; }
+#footer { color: #a6a6a6; background: #f2f2f2 url(../img/white-bg.png) fixed; padding: 0.5em 0; }
 #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6, #footer .subheader, #footer p, #footer blockquote, #footer a, #footer small { color: #a6a6a6; }
 #footer code, #footer abbr, #footer acronym { color: gray; }
 #footer .row { margin-bottom: 0; }
